--- a/src/componentes/css/Item.css
+++ b/src/componentes/css/Item.css
@@ -1,4 +1,3 @@
-/* src/componentes/css/Item.css */
 
 .item-card {
   border: 1px solid #ddd;
@@ -49,4 +48,11 @@
 
 .item-btn:hover {
   background: #333;
+}
+
+.item-condition {
+  font-size: 13px;
+  font-weight: bold;
+  color: #0070c9;
+  margin-bottom: 5px;
 }
