--- a/src/componentes/css/Navbar.css
+++ b/src/componentes/css/Navbar.css
@@ -2,7 +2,7 @@
   background-color: #000;
   padding: 15px 30px;
   display: flex;
-  justify-content: space-between; /* separa links y logo */
+  justify-content: space-between;
   align-items: center;
 }
 
