--- a/src/componentes/css/Item.css
+++ b/src/componentes/css/Item.css
@@ -56,3 +56,11 @@
   color: #0070c9;
   margin-bottom: 5px;
 }
+
+.products-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: flex-start;
+  padding: 20px;
+}
